--- a/prod/docker-compose.yaml
+++ b/prod/docker-compose.yaml
@@ -4,22 +4,22 @@ services:
     image: nginx:alpine
     container_name: prod_proxy
     ports:
-      - "0.0.0.0:80:80"
-    #  - "443:443"
+      - "80:80"
+      - "443:443"
     volumes:
       - ./bin/data/nginx:/etc/nginx/conf.d
-    #  - ./bin/certbot/conf:/etc/letsencrypt
-    #  - ./bin/certbot/www:/var/www/certbot
-    #command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+      - ./bin/certbot/conf:/etc/letsencrypt
+      - ./bin/certbot/www:/var/www/certbot
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
 
-  #certbot:
-  #  image: certbot/certbot
-  #  container_name: prod_certbot
-  #  volumes:
-  #    - ./bin/certbot/conf:/etc/letsencrypt
-  #    - ./bin/certbot/www:/var/www/certbot
-  #  entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+  certbot:
+    image: certbot/certbot
+    container_name: prod_certbot
+    volumes:
+      - ./bin/certbot/conf:/etc/letsencrypt
+      - ./bin/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 
   odoo:
